--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>HTML Tables</title>
   </head>
   <body>
-    <!-- Write your HTML here -->
+<table>
+  <tr>
+    <th>City</th>
+    <th>State</th>
+    <th>2017 estimate</th>
+  </tr>
+      <tr>
+        <th>New York</th>
+        <th>New York</th>
+        <th>8,622,698</th>
+      </tr>
+      <tr>
+        <td>Los Angeles</td>
+        <td>Colifornia</td>
+        <td>3,999,759</td>
+      </tr>
+      <tr>
+        <td>chicago</td>
+        <td>Illlois</td>
+        <td>2,716,450</td>
+      </tr>
+      <tr>
+        <td>Houston</td>
+        <td>Texas</td>
+        <td>2,312,717</td>
+      </tr>
+    </table>
   </body>
 </html>
